# socialmediaarchive

./: .dockerignore
backend/: .gitignore  Cargo.toml  example.env
backend/src/: api.rs  client.rs  daemon.rs  download.rs  embeddings.rs  lib.rs  main.rs  storage.rs  vector.rs
infra/: .gitignore  Dockerfile  backend.tf  ipfs.tf  main.tf  prod.tfvars  qdrant.tf
