[package]
name = "backend"
authors = ["Abby Bryant <rand0m-cloud@outlook.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
clap = {version = "4.4.8", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3.29"
ipfs-api = "0.17.0"
qdrant-client = "1.6.0"
reqwest = {version = "0.11.22", features = ["json"]}
serde = "1.0.192"
serde_json = "1.0.108"
tempdir = "0.3.7"
tokio = {version = "1.34.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
uuid = {version = "1.5.0", features = ["v4"]}
